--- a/templates/react/components/app/style.scss
+++ b/templates/react/components/app/style.scss
@@ -1,4 +1,13 @@
-@import "../style";
-.sample{
-	background:yellow
+.main-container{
+  margin-top: 123px;
+}
+.content-center{
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-align: center;
+  align-items: center;
+  vertical-align: middle;
+  text-align: center;
+  display: -ms-flexbox;
+  display: flex;
 }
