scss variables integration

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1,3 +1,10 @@
+/*fonts*/
+/*colors*/
+/*text*/
+/*backgrounds*/
+/*border*/
 .app {
-  background: #fff;
-  font-family: Oswald,Arial,sans-serif; }
+  background: #ffffff;
+  font-family: Oswald, Arial, sans-serif; }
+
+/*# sourceMappingURL=app.css.map */
