--- a/templates/react/components/app/style.scss
+++ b/templates/react/components/app/style.scss
@@ -1,13 +1,17 @@
-.app{
-  a{
+@import '../../../../public/styles/variables.scss';
+
+.app {
+  a {
 	text-decoration: none;
 	cursor: pointer;
   }
 }
-.main-container{
+
+.main-container {
   margin-top: 123px;
 }
-.content-center{
+
+.content-center {
   -ms-flex-pack: center;
   justify-content: center;
   -ms-flex-align: center;
