--- a/templates/react/components/banner/style.scss
+++ b/templates/react/components/banner/style.scss
@@ -1,7 +1,9 @@
- .banner {
+@import '../../../../public/styles/variables.scss';
+
+.banner {
   height: 300px;
-  background-color: #e6e6e6;
+  background-color: $thumbnail-bg;
   &.background {
-	
+
   }
 }
