footer and product grid

--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -5,6 +5,7 @@ $app-font : Oswald,Arial,sans-serif;
 $primary-color: #faab37;
 $brand-red : #cb1d00;
 $brand-white : #ffffff;
+$brand-black: #333;
 
 /*text*/
 $link-grey-color: #606060;
@@ -12,6 +13,7 @@ $link-blue-color: #166ba2;
 
 /*backgrounds*/
 $thumbnail-bg : #e6e6e6;
+$light-bg : #f7f7f7;
 
 /*border*/
 $border-color : #e9e9e9;
