--- a/templates/react/components/card/style.css
+++ b/templates/react/components/card/style.css
@@ -13,17 +13,30 @@
     font-size: 18px;
     color: #606060;
     display: block; }
-  .card .card-body .product-image .image {
-    display: block;
-    width: 100%;
-    height: 252px;
-    background-color: #e6e6e6; }
+  .card .card-body .product-image {
+    position: relative; }
+    .card .card-body .product-image .save-btn {
+      display: none;
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      padding: 5px;
+      width: 76px;
+      font-size: 20px; }
+    .card .card-body .product-image .image {
+      display: block;
+      width: 100%;
+      height: 252px;
+      background-color: #e6e6e6; }
+    .card .card-body .product-image:hover .save-btn {
+      display: block; }
   .card .card-body .product-text {
     line-height: 17px;
     text-align: justify;
     font-size: 12px;
     margin-top: 5px;
-    margin-bottom: 5px; }
+    margin-bottom: 5px;
+    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; }
   .card .card-footer {
     display: flex;
     justify-content: space-between; }
@@ -31,5 +44,11 @@
       color: #606060;
       font-size: 16px;
       letter-spacing: 1px; }
+      .card .card-footer .product-range .saves {
+        font-size: 14px; }
+        .card .card-footer .product-range .saves i {
+          color: #606060; }
+          .card .card-footer .product-range .saves i:hover {
+            color: #cb1d00; }
 
 /*# sourceMappingURL=style.css.map */
