--- a/templates/react/components/card/style.scss
+++ b/templates/react/components/card/style.scss
@@ -15,11 +15,26 @@
   }
   .card-body {
 	.product-image {
+	  position:relative;
+	  .save-btn{
+		display: none;
+		position: absolute;
+		top: 15px;
+		right: 15px;
+		padding: 5px;
+		width: 76px;
+		font-size: 20px;
+	  }
 	  .image {
 		display: block;
 		width: 100%;
 		height: 252px;
 		background-color: $thumbnail-bg;
+	  }
+	  &:hover{
+		.save-btn{
+		  display: block;
+		}
 	  }
 	}
 	.product-text {
@@ -28,6 +43,7 @@
 	  font-size: 12px;
 	  margin-top: 5px;
 	  margin-bottom: 5px;
+	  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 	}
   }
   .card-footer {
@@ -37,6 +53,15 @@
 	  color: $link-grey-color;
 	  font-size: 16px;
 	  letter-spacing: 1px;
+	  .saves{
+		font-size: 14px;
+		i{
+		  color:$link-grey-color;
+		  &:hover{
+			color:$brand-red;
+		  }
+		}
+	  }
 	}
 	.product-action {
 
