--- a/templates/react/components/footer/style.scss
+++ b/templates/react/components/footer/style.scss
@@ -1,5 +1,29 @@
+@import '../../../../public/styles/variables.scss';
+
 .footer{
-  background: #e6e6e6;
-  height: 200px;
+  padding:50px;
   margin-top:100px;
+  background-color: $light-bg;
+  .title {
+	font-size: 18px;
+	margin-bottom: 14px;
+	font-weight: 700;
+  }
+  .links{
+	ul{
+	  padding:0px;
+	  li{
+		list-style: none;
+		a{
+		  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+		  font-size: 14px;
+		  color:$brand-black;
+		  line-height: 28px;
+		  &:hover{
+			color:$primary-color;
+		  }
+		}
+	  }
+	}
+  }
 }
