--- a/templates/react/components/header/style.css
+++ b/templates/react/components/header/style.css
@@ -1,7 +1,8 @@
 .header {
   position: fixed;
   width: 100%;
-  top: 0px; }
+  top: 0px;
+  z-index: 1; }
   .header .header-top {
     height: 57px;
     background: #f5f5f5; }
