product group page

--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -1,5 +1,6 @@
 /*fonts*/
-$app-font : Oswald,Arial,sans-serif;
+$default-font : Oswald,Arial,sans-serif;
+$helvetica-font : 'Helvetica Neue',Helvetica,Arial,sans-serif;
 
 /*colors*/
 $primary-color: #faab37;
