--- a/templates/react/components/app/style.scss
+++ b/templates/react/components/app/style.scss
@@ -2,9 +2,12 @@
 
 .app {
   background: $brand-white;
-  font-family: $app-font;
+  font-family: $default-font;
   .container{
 	width:1000px;
+  }
+  ul{
+	padding:0px;
   }
   p{
 	margin:0;
