--- a/templates/react/components/card/style.css
+++ b/templates/react/components/card/style.css
@@ -4,7 +4,7 @@
 /*backgrounds*/
 /*border*/
 .card {
-  width: 302px; }
+  width: 100%; }
   .card .card-header .product-title {
     margin-bottom: 2px;
     text-align: center;
@@ -36,7 +36,7 @@
     font-size: 12px;
     margin-top: 5px;
     margin-bottom: 5px;
-    font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; }
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
   .card .card-footer {
     display: flex;
     justify-content: space-between; }
