--- a/templates/react/components/card/style.scss
+++ b/templates/react/components/card/style.scss
@@ -1,7 +1,7 @@
 @import '../../../../public/styles/variables.scss';
 
 .card {
-  width: 302px;
+  width: 100%;
   .card-header {
 	.product-title {
 	  margin-bottom: 2px;
@@ -43,7 +43,7 @@
 	  font-size: 12px;
 	  margin-top: 5px;
 	  margin-bottom: 5px;
-	  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+	  font-family: $helvetica-font;
 	}
   }
   .card-footer {
