--- a/templates/react/components/footer/style.scss
+++ b/templates/react/components/footer/style.scss
@@ -11,11 +11,10 @@
   }
   .links{
 	ul{
-	  padding:0px;
 	  li{
 		list-style: none;
 		a{
-		  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+		  font-family: $helvetica-font;
 		  font-size: 14px;
 		  color:$brand-black;
 		  line-height: 28px;
