--- a/templates/react/components/app/style.css
+++ b/templates/react/components/app/style.css
@@ -16,6 +16,13 @@
   .app a {
     text-decoration: none;
     cursor: pointer; }
+  .app input {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  .app textarea {
+    max-height: 200px;
+    height: 180px;
+    resize: none;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
   .app .main-container {
     margin-top: 123px; }
   .app .content-center {
