header dropdown menu

--- a/templates/react/components/header/style.css
+++ b/templates/react/components/header/style.css
@@ -1,3 +1,8 @@
+/*fonts*/
+/*colors*/
+/*text*/
+/*backgrounds*/
+/*border*/
 .header {
   position: fixed;
   width: 100%;
@@ -58,8 +63,9 @@
       -o-transition: border .5s;
       -ms-transition: border .5s;
       transition: border .5s;
-      box-shadow: 3px 3.25px 7px rgba(0, 0, 0, 0.3); }
-      .header .header-nav ul li a {
+      box-shadow: 3px 3.25px 7px rgba(0, 0, 0, 0.3);
+      position: relative; }
+      .header .header-nav ul li a.nav-link {
         display: block;
         width: auto;
         height: 76.91px;
@@ -71,15 +77,36 @@
         -ms-transition: color .5s, background .5s, height .5s;
         transition: color .5s, background .5s, height .5s;
         cursor: pointer; }
-        .header .header-nav ul li a .icon {
+        .header .header-nav ul li a.nav-link .icon {
           display: block;
           padding-top: .5em; }
-        .header .header-nav ul li a .text {
+        .header .header-nav ul li a.nav-link .text {
           display: block;
           font-size: 14.4px;
           font-weight: 600; }
-        .header .header-nav ul li a:hover {
+        .header .header-nav ul li a.nav-link:hover {
           height: 82.77px; }
+      .header .header-nav ul li .dropdown-menu {
+        top: 98%;
+        min-width: 145px;
+        border-radius: 0px;
+        background-color: #ededed;
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        border: none;
+        padding: 0px; }
+        .header .header-nav ul li .dropdown-menu a {
+          color: #333;
+          padding: 8px 10px;
+          text-decoration: none;
+          display: block;
+          font-size: 17px;
+          font-weight: 400; }
+          .header .header-nav ul li .dropdown-menu a:hover {
+            border: none !important;
+            background: #e6e6e6; }
+        .header .header-nav ul li .dropdown-menu .dropdown-divider {
+          background-color: #858e94;
+          height: 1px; }
       .header .header-nav ul li:nth-child(1) {
         background: #ededed;
         background: -moz-linear-gradient(top, #fafafa 0, #ededed 100%);
