--- a/templates/react/containers/app/style.scss
+++ b/templates/react/containers/app/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../public/styles/variables.scss';
+@import '../../../../public/styles/variables';
 
 .app {
   background: $brand-white;
