--- a/templates/react/components/header/style.scss
+++ b/templates/react/components/header/style.scss
@@ -32,10 +32,11 @@
 		
 	  }
 	}
-	a.dropdown-toggle{
+	a.nav-link{
 	  color: #000;
 	  font-size : 16px;
 	  font-weight: bold;
+	  margin-left: 10px;
 	}
 	li {
 	  list-style: none;
