--- a/templates/react/components/header/style.css
+++ b/templates/react/components/header/style.css
@@ -7,40 +7,10 @@
   position: fixed;
   width: 100%;
   top: 0px;
-  z-index: 2;
-  /**
-  		Added By Inder - Edit this jass
-   */ }
-  .header .my-account-dropdown {
-    position: absolute;
-    top: 10px;
-    right: 20px; }
-    .header .my-account-dropdown .dropdown-menu {
-      background-color: #ededed;
-      min-width: 140px;
-      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
-      .header .my-account-dropdown .dropdown-menu a {
-        font-size: 15px !important;
-        font-weight: bold;
-        color: #000;
-        padding: 10px;
-        text-decoration: none;
-        display: block;
-        height: 40px !important;
-        font-size: .8em;
-        text-align: left;
-        border-bottom: 0 solid #e0e0e0 !important;
-        width: auto; }
-    .header .my-account-dropdown a.nav-link {
-      color: #000;
-      font-size: 16px;
-      font-weight: bold;
-      margin-left: 10px; }
-    .header .my-account-dropdown li {
-      list-style: none; }
+  z-index: 2; }
   .header .header-top {
     height: 57px;
-    background: #f5f5f5; }
+    background: #f7f7f7; }
     .header .header-top .content {
       position: relative; }
       .header .header-top .content .search {
@@ -57,6 +27,27 @@
         position: absolute;
         right: 10px;
         top: 15px; }
+        .header .header-top .content .actions .dropdown-menu {
+          min-width: 140px;
+          border-radius: 0px;
+          background-color: #ededed;
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          border: none;
+          padding: 0px; }
+          .header .header-top .content .actions .dropdown-menu a {
+            font-size: 15px;
+            padding: 10px;
+            display: block;
+            margin: 0px; }
+            .header .header-top .content .actions .dropdown-menu a:hover {
+              background: #e6e6e6; }
+        .header .header-top .content .actions a {
+          color: #000;
+          font-size: 16px;
+          font-weight: bold;
+          margin-left: 10px; }
+          .header .header-top .content .actions a .icon {
+            margin-right: 5px; }
   .header .header-nav .nav-accent {
     display: block;
     width: 50%;
