--- a/templates/react/containers/contactUs/style.css
+++ b/templates/react/containers/contactUs/style.css
@@ -19,5 +19,7 @@
       overflow: hidden; }
       .contact-us .form form .btn {
         margin-top: 10px; }
+  .contact-us p.title {
+    text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
