--- a/templates/react/containers/contactUs/style.scss
+++ b/templates/react/containers/contactUs/style.scss
@@ -9,6 +9,9 @@
 	  font-size: 32px;
 	  margin-bottom: 10px;
 	}
+	.title-text{
+	  font-size:20px;
+	}
 	form{
 	  background:$light-bg;
 	  border-radius: 4px;
