--- a/templates/react/components/aboutUs/style.css
+++ b/templates/react/components/aboutUs/style.css
@@ -3,8 +3,12 @@
 /*text*/
 /*backgrounds*/
 /*border*/
+.about-us .container.title {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 50px; }
 .about-us .details {
-  padding-top: 100px; }
+  padding-top: 50px; }
   .about-us .details .row .image-box .image {
     display: block;
     width: 95%;
