--- a/templates/react/components/aboutUs/style.scss
+++ b/templates/react/components/aboutUs/style.scss
@@ -1,8 +1,13 @@
 @import '../../../../public/styles/variables.scss';
 
 .about-us{
+  .container.title{
+	text-align: center;
+	font-size:20px;
+	padding-top: 50px;
+  }
   .details{
-	padding-top: 100px;
+	padding-top: 50px;
 	.row{
 	  .image-box{
 		.image{
