--- a/templates/react/components/productPitch/style.scss
+++ b/templates/react/components/productPitch/style.scss
@@ -78,6 +78,28 @@
 		  font-weight:300;
 		}
 	  }
+	  &.testimonials{
+		padding:20px;
+		border-bottom:1px solid $border-color;
+		.title{
+		  color: $primary-color;
+		  font-size: 24px;
+		  font-weight: bold;
+		  margin-top: 10px;
+		  margin-bottom: 25px;
+		}
+		button{
+		  margin-top: 20px;
+		}
+	  }
+	  &.faqs{
+		padding:20px;
+		text-align:left;
+		.title{
+		  text-align:center;
+		  margin-bottom:20px;
+		}
+	  }
 	  img{
 		width:100px;
 		display: block;
