--- a/templates/react/containers/submit-product/product-form/style.css
+++ b/templates/react/containers/submit-product/product-form/style.css
@@ -5,12 +5,11 @@
     width: 571px;
     margin: 0 auto;
     display: block; }
-  .step-two form {
+  .step-two .form {
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px 15px 30px 15px;
     margin-top: 30px;
     min-height: 400px; }
 
