--- a/templates/react/containers/submit-product/product-form/style.scss
+++ b/templates/react/containers/submit-product/product-form/style.scss
@@ -6,12 +6,11 @@
 	margin: 0 auto;
 	display: block;
   }
-  form{
+  .form{
 	background-color: white;
 	border: 1px solid rgba(0,0,0,0.2);
 	box-shadow: 0px 3px 15px rgba(0,0,0,0.1);
-	padding-top: 30px;
-	padding-bottom: 30px;
+	padding: 30px 15px 30px 15px;
 	margin-top: 30px;
 	min-height:400px;
   }
