--- a/templates/react/containers/submit-product/product-form/style.css
+++ b/templates/react/containers/submit-product/product-form/style.css
@@ -12,5 +12,28 @@
     padding: 30px 15px 30px 15px;
     margin-top: 30px;
     min-height: 400px; }
+  .step-two .tips {
+    background-color: #f1f2de;
+    border: 2px solid rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    padding: 15px;
+    width: 356px;
+    float: right; }
+    .step-two .tips img {
+      width: 30px;
+      float: left;
+      margin-top: 16px;
+      margin-left: -6px; }
+    .step-two .tips h3 {
+      font-size: 18px;
+      text-decoration: underline;
+      padding-bottom: 0px;
+      margin-bottom: 0px;
+      font-weight: normal; }
+    .step-two .tips p {
+      margin-top: 10px;
+      margin-bottom: 10px; }
 
 /*# sourceMappingURL=style.css.map */
