--- a/templates/react/containers/submit-product/product-form/style.scss
+++ b/templates/react/containers/submit-product/product-form/style.scss
@@ -14,5 +14,32 @@
 	margin-top: 30px;
 	min-height:400px;
   }
+  .tips {
+	background-color: #f1f2de;
+	border: 2px solid rgba(0,0,0,0.15);
+	border-radius: 5px;
+	margin-top: 30px;
+	margin-bottom: 40px;
+	padding: 15px;
+	width: 356px;
+	float: right;
+	img {
+	  width: 30px;
+	  float: left;
+	  margin-top: 16px;
+	  margin-left: -6px;
+	}
+	h3 {
+	  font-size: 18px;
+	  text-decoration: underline;
+	  padding-bottom: 0px;
+	  margin-bottom: 0px;
+	  font-weight: normal;
+	}
+	p {
+	  margin-top: 10px;
+	  margin-bottom: 10px;
+	}
+  }
 }
 
