--- a/templates/react/containers/submit-product/product-form/style.css
+++ b/templates/react/containers/submit-product/product-form/style.css
@@ -9,17 +9,21 @@
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
-    padding: 30px 15px 30px 15px;
+    padding: 30px 15px 15px 15px;
     margin-top: 30px;
-    min-height: 400px; }
+    min-height: 400px;
+    overflow: hidden; }
+    .step-two .form .submit-btn {
+      width: 100%;
+      margin-top: 60px;
+      padding: 8px; }
   .step-two .tips {
     background-color: #f1f2de;
     border: 2px solid rgba(0, 0, 0, 0.15);
     border-radius: 5px;
-    margin-top: 30px;
+    margin-top: 23px;
     margin-bottom: 40px;
     padding: 15px;
-    width: 356px;
     float: right; }
     .step-two .tips img {
       width: 30px;
@@ -34,6 +38,13 @@
       font-weight: normal; }
     .step-two .tips p {
       margin-top: 10px;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      line-height: 25px;
+      font-family: sans-serif; }
+  .step-two .preview {
+    text-align: center; }
+    .step-two .preview .card {
+      width: 80%;
+      margin: 20px auto auto auto; }
 
 /*# sourceMappingURL=style.css.map */
