--- a/templates/react/components/header/style.css
+++ b/templates/react/components/header/style.css
@@ -7,6 +7,7 @@
   position: fixed;
   width: 100%;
   top: 0px;
+  left: 0;
   z-index: 2; }
   .header .header-top {
     height: 57px;
@@ -195,5 +196,74 @@
         box-shadow: 3px 3.25px 7px rgba(0, 0, 0, 0.3); }
         .header .header-nav ul li:nth-child(6) a:hover {
           border-bottom: 4px solid #000; }
+      .header .header-nav ul li.mobile {
+        display: none; }
+  .header.shrink .nav-accent {
+    height: 37px; }
+  .header.shrink .header-nav ul {
+    margin-top: -5px; }
+    .header.shrink .header-nav ul li a.nav-link {
+      height: 46px; }
+      .header.shrink .header-nav ul li a.nav-link .icon {
+        display: none; }
+      .header.shrink .header-nav ul li a.nav-link .text {
+        padding-top: 13px; }
+      .header.shrink .header-nav ul li a.nav-link:hover {
+        height: 50px; }
+
+/* responsiveness */
+@media (min-width: 1400px) {
+  .header .header-nav ul {
+    width: 1400px;
+    margin: auto;
+    border: 1px solid red; } }
+@media (max-width: 1024px) {
+  .header .header-nav ul {
+    margin-top: 0px; }
+
+  .header .header-nav ul li {
+    width: 20%;
+    box-shadow: none;
+    vertical-align: top; }
+
+  .header .header-nav ul li a.nav-link {
+    height: 66px; } }
+@media (max-width: 768px) {
+  .header .header-top .content .search {
+    display: none; }
+
+  .header .header-nav ul li:nth-child(3) {
+    display: none; }
+
+  .header .header-nav ul li:nth-child(4) {
+    display: none; }
+
+  .header .header-nav ul li.mobile {
+    display: inline-block; }
+    .header .header-nav ul li.mobile a {
+      background: #1691be;
+      background: -moz-linear-gradient(top, #19a2d5 0, #1691be 100%);
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #19a2d5), color-stop(100%, #1691be));
+      background: -webkit-linear-gradient(top, #19a2d5 0, #1691be 100%);
+      background: -o-linear-gradient(top, #19a2d5 0, #1691be 100%);
+      background: -ms-linear-gradient(top, #19a2d5 0, #1691be 100%);
+      background: linear-gradient(to bottom, #19a2d5 0, #1691be 100%); }
+      .header .header-nav ul li.mobile a a:hover {
+        border-bottom: 4px solid #0a4b75; }
+
+  .header .header-top .content .logo img {
+    position: absolute;
+    left: 2px;
+    top: 8px; } }
+@media (max-width: 520px) {
+  .header .header-nav ul li {
+    width: 25%; }
+
+  .header .header-nav ul li .dropdown-menu {
+    left: -30px; } }
+@media (max-width: 420px) {
+  .header .header-nav ul li .dropdown-menu {
+    left: -70px; } }
+/* /responsiveness */
 
 /*# sourceMappingURL=style.css.map */
