--- a/templates/react/components/header/style.scss
+++ b/templates/react/components/header/style.scss
@@ -4,6 +4,7 @@
   position: fixed;
   width: 100%;
   top: 0px;
+  left:0;
   z-index: 2;
   .header-top {
 	height: 57px;
@@ -36,7 +37,7 @@
 		  border: none;
 		  padding: 0px;
 		  a {
-			font-size:15px;
+			font-size: 15px;
 			padding: 10px;
 			display: block;
 			margin: 0px;
@@ -45,7 +46,7 @@
 			}
 		  }
 		}
-		a{
+		a {
 		  color: #000;
 		  font-size: 16px;
 		  font-weight: bold;
@@ -231,7 +232,100 @@
 			border-bottom: 4px solid #000;
 		  }
 		}
+		&.mobile{
+		  display:none;
+		}
+	  }
+	}
+  }
+  &.shrink {
+	.nav-accent {
+	  height: 37px;
+	}
+	.header-nav {
+	  ul {
+		margin-top: -5px;
+		li {
+		  a.nav-link{
+			height:46px;
+			.icon{
+			  display: none;
+			}
+			.text{
+			  padding-top:13px;
+			}
+			&:hover {
+			  height: 50px;
+			}
+		  }
+		}
 	  }
 	}
   }
 }
+/* responsiveness */
+@media (min-width: 1400px){
+  .header .header-nav ul{
+	width:1400px;
+	margin:auto;
+	border:1px solid red;
+  }
+}
+@media (max-width: 1024px){
+  .header .header-nav ul{
+	margin-top:0px;
+  }
+  .header .header-nav ul li{
+	width:20%;
+	box-shadow: none;
+	vertical-align: top;
+  }
+  .header .header-nav ul li a.nav-link{
+	height:66px;
+  }
+}
+@media (max-width: 768px){
+  .header .header-top .content .search{
+	display: none;
+  }
+  .header .header-nav ul li:nth-child(3){
+	display: none;
+  }
+  .header .header-nav ul li:nth-child(4){
+	display: none;
+  }
+  .header .header-nav ul li.mobile {
+	display: inline-block;
+	a {
+	  background: #1691be;
+	  background: -moz-linear-gradient(top, #19a2d5 0, #1691be 100%);
+	  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #19a2d5), color-stop(100%, #1691be));
+	  background: -webkit-linear-gradient(top, #19a2d5 0, #1691be 100%);
+	  background: -o-linear-gradient(top, #19a2d5 0, #1691be 100%);
+	  background: -ms-linear-gradient(top, #19a2d5 0, #1691be 100%);
+	  background: linear-gradient(to bottom, #19a2d5 0, #1691be 100%);
+	  a:hover {
+		border-bottom: 4px solid #0a4b75;
+	  }
+	}
+  }
+  .header .header-top .content .logo img{
+	position:absolute;
+	left:2px;
+	top:8px;
+  }
+}
+@media (max-width: 520px){
+  .header .header-nav ul li {
+	width: 25%;
+  }
+  .header .header-nav ul li .dropdown-menu{
+	left:-30px;
+  }
+}
+@media (max-width: 420px) {
+  .header .header-nav ul li .dropdown-menu{
+	left:-70px;
+  }
+}
+/* /responsiveness */
