--- a/templates/react/containers/app/style.css
+++ b/templates/react/containers/app/style.css
@@ -55,4 +55,15 @@
     padding: 6px 12px;
     font-size: 14px; }
 
+/* responsiveness */
+@media (min-width: 1400px) {
+  .app .main-container {
+    width: 1400px;
+    border: 5px solid red;
+    margin: 123px auto auto auto; } }
+@media (max-width: 1024px) {
+  .app .container {
+    width: 100%; } }
+/* /responsiveness */
+
 /*# sourceMappingURL=style.css.map */
