--- a/templates/react/containers/app/style.scss
+++ b/templates/react/containers/app/style.scss
@@ -3,28 +3,28 @@
 .app {
   background: $brand-white;
   font-family: $default-font;
-  .container{
-	width:1000px;
+  .container {
+	width: 1000px;
   }
-  ul{
-	padding:0px;
+  ul {
+	padding: 0px;
   }
-  p{
-	margin:0;
-	padding:0;
+  p {
+	margin: 0;
+	padding: 0;
   }
   a {
 	text-decoration: none;
 	cursor: pointer;
   }
-  input{
-	font-family:$helvetica-font;
+  input {
+	font-family: $helvetica-font;
   }
-  textarea{
+  textarea {
 	max-height: 200px;
-	height:180px;
+	height: 180px;
 	resize: none;
-	font-family:$helvetica-font;
+	font-family: $helvetica-font;
   }
   .main-container {
 	margin-top: 123px;
@@ -39,25 +39,25 @@
 	display: -ms-flexbox;
 	display: flex;
   }
-  .btn-yellow{
+  .btn-yellow {
 	color: $brand-white;
 	background-color: $primary-color;
 	border-color: $primary-color;
   }
-  .btn-red{
+  .btn-red {
 	color: $brand-white;
 	background-color: $brand-red;
 	border-color: $brand-red;
   }
-  .btn{
+  .btn {
 	border-radius: 0px;
 	font-size: 22px;
 	font-weight: 400;
-	text-shadow: 1px 1px rgba(0,0,0,.25);
+	text-shadow: 1px 1px rgba(0, 0, 0, .25);
 	padding: 2px 8px;
   }
-  .input-group-btn{
-	.btn{
+  .input-group-btn {
+	.btn {
 	  border-bottom-right-radius: 4px;
 	  border-top-right-radius: 4px;
 	  text-shadow: none;
@@ -66,5 +66,34 @@
 	}
   }
 }
+
+/* responsiveness */
+@media (min-width: 1400px) {
+  .app .main-container {
+	width: 1400px;
+	border: 5px solid red;
+	margin: 123px auto auto auto;
+  }
+}
+
+@media (max-width: 1024px) {
+  .app .container {
+	width: 100%;
+  }
+}
+
+@media (max-width: 992px) {
+
+}
+
+@media (max-width: 762px) {
+
+}
+
+@media (max-width: 520px) {
+
+}
+
+/* /responsiveness */
 
 
