--- a/templates/react/containers/home/style.css
+++ b/templates/react/containers/home/style.css
@@ -1,3 +1,25 @@
+.home .row {
+  margin: 0px; }
+  .home .row .column {
+    border: 1px solid red;
+    padding: 0px; }
+    .home .row .column .container {
+      width: 100%;
+      border: 1px solid green; }
+    .home .row .column .banner {
+      margin: 10px; }
+    .home .row .column.left .banner {
+      margin-right: 0px; }
+    .home .row .column.right .banner {
+      margin-left: 0px; }
 
+/* responsiveness */
+@media (max-width: 1200px) {
+  .home .row .column.left {
+    display: none; }
+
+  .home .row .column.right {
+    display: none; } }
+/* /responsiveness */
 
 /*# sourceMappingURL=style.css.map */
