--- a/templates/react/components/card/style.scss
+++ b/templates/react/components/card/style.scss
@@ -15,8 +15,8 @@
   }
   .card-body {
 	.product-image {
-	  position:relative;
-	  .save-btn{
+	  position: relative;
+	  .save-btn {
 		display: none;
 		position: absolute;
 		top: 15px;
@@ -31,8 +31,8 @@
 		height: 252px;
 		background-color: $thumbnail-bg;
 	  }
-	  &:hover{
-		.save-btn{
+	  &:hover {
+		.save-btn {
 		  display: block;
 		}
 	  }
@@ -53,12 +53,12 @@
 	  color: $link-grey-color;
 	  font-size: 16px;
 	  letter-spacing: 1px;
-	  .saves{
+	  .saves {
 		font-size: 14px;
-		i{
-		  color:$link-grey-color;
-		  &:hover{
-			color:$brand-red;
+		i {
+		  color: $link-grey-color;
+		  &:hover {
+			color: $brand-red;
 		  }
 		}
 	  }
@@ -68,3 +68,12 @@
 	}
   }
 }
+
+/* responsiveness */
+@media (max-width: 992px) {
+  .card {
+	margin-bottom: 30px;
+  }
+}
+
+/* /responsiveness */
