--- a/templates/react/components/privacy-policy/style.css
+++ b/templates/react/components/privacy-policy/style.css
@@ -3,6 +3,7 @@
 /*text*/
 /*backgrounds*/
 /*border*/
+/*social*/
 .privacy-policy .details {
   padding-top: 30px; }
   .privacy-policy .details h2.title {
