--- a/templates/react/components/productGroup/style.css
+++ b/templates/react/components/productGroup/style.css
@@ -3,6 +3,7 @@
 /*text*/
 /*backgrounds*/
 /*border*/
+/*social*/
 .product-group {
   padding-top: 70px; }
   .product-group .container .column .categories {
