--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -18,3 +18,9 @@ $light-bg : #f7f7f7;
 
 /*border*/
 $border-color : #e9e9e9;
+
+/*social*/
+$facebook-color: #3c5a98;
+$twitter-color: #1ea1f2;
+$instagram-color: #bb0296;
+$pinterest-color:#bc0718;
