wishlist page banner add and responsiveness

--- a/templates/react/components/wishlist/style.css
+++ b/templates/react/components/wishlist/style.css
@@ -31,5 +31,26 @@
             color: #bd081b; }
           .wish-list .heading .share ul li a.link {
             color: #555; }
+  .wish-list .more .row {
+    margin: 0px; }
+    .wish-list .more .row .column {
+      padding: 0px; }
+      .wish-list .more .row .column .container {
+        width: 100%; }
+      .wish-list .more .row .column .banner {
+        margin: 27px 10px 10px 10px; }
+      .wish-list .more .row .column.left .banner {
+        margin-right: 0px; }
+      .wish-list .more .row .column.right .banner {
+        margin-left: 0px; }
+
+/* responsiveness */
+@media (max-width: 1200px) {
+  .more .row .column.left {
+    display: none; }
+
+  .more .row .column.right {
+    display: none; } }
+/* /responsiveness */
 
 /*# sourceMappingURL=style.css.map */
