--- a/templates/react/components/productGroup/style.css
+++ b/templates/react/components/productGroup/style.css
@@ -18,9 +18,9 @@
         font-weight: bold;
         color: #333; }
         .product-group .container .column .categories ul li a:hover {
-          color: #faab37; }
+          color: #77b353; }
         .product-group .container .column .categories ul li a.selected {
-          color: #faab37; }
+          color: #77b353; }
       .product-group .container .column .categories ul li .sub-categories a {
         padding: 10px 10px 10px 30px;
         font-weight: normal;
