--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -3,13 +3,15 @@ $default-font : Oswald,Arial,sans-serif;
 $helvetica-font : 'Helvetica Neue',Helvetica,Arial,sans-serif;
 
 /*colors*/
-$primary-color: #faab37;
+$primary-color: #77b353;
+$dark-primary-color: #347C17;
 $brand-red : #cb1d00;
+$dark-brand-red: #b91a00;
 $brand-white : #ffffff;
 $brand-black: #333;
 
 /*text*/
-$link-grey-color: #606060;
+$link-grey-color: #676767;
 $link-blue-color: #166ba2;
 
 /*backgrounds*/
