--- a/templates/react/components/carousel/style.css
+++ b/templates/react/components/carousel/style.css
@@ -14,7 +14,7 @@
     margin: auto; }
   .carousel .carousel-control {
     opacity: 1;
-    color: #faab37;
+    color: #77b353;
     top: -60px;
     z-index: 1; }
   .carousel .carousel-indicators {
@@ -34,7 +34,7 @@
       .carousel .carousel-indicators li.active {
         width: 50px;
         height: 50px;
-        border: 2px solid #faab37;
+        border: 2px solid #77b353;
         margin: 1px; }
 
 /*# sourceMappingURL=style.css.map */
