--- a/templates/react/components/filters/style.css
+++ b/templates/react/components/filters/style.css
@@ -3,6 +3,7 @@
   .filters ul li a {
     display: block;
     padding: 20px 20px 20px 0px;
-    font-size: 18px; }
+    font-size: 18px;
+    color: #4168ff; }
 
 /*# sourceMappingURL=style.css.map */
