--- a/templates/react/components/footer/style.css
+++ b/templates/react/components/footer/style.css
@@ -20,6 +20,6 @@
       color: #333;
       line-height: 28px; }
       .footer .links ul li a:hover {
-        color: #faab37; }
+        color: #77b353; }
 
 /*# sourceMappingURL=style.css.map */
