--- a/templates/react/components/productPitch/style.css
+++ b/templates/react/components/productPitch/style.css
@@ -57,7 +57,7 @@
       margin-top: 10px;
       margin-bottom: 25px; }
     .product-pitch .content .item.stats .value {
-      color: #faab37;
+      color: #77b353;
       font-size: 30px;
       font-weight: bold;
       letter-spacing: -2px; }
@@ -68,7 +68,7 @@
     padding: 20px;
     border-bottom: 1px solid #e9e9e9; }
     .product-pitch .content .item.testimonials .title {
-      color: #faab37;
+      color: #77b353;
       font-size: 24px;
       font-weight: bold;
       margin-top: 10px;
