--- a/templates/react/components/testimonials/style.css
+++ b/templates/react/components/testimonials/style.css
@@ -8,7 +8,7 @@
   width: 75%;
   margin: auto; }
   .testimonials .item {
-    border: 1px solid #faab37;
+    border: 1px solid #77b353;
     border-radius: 16px;
     padding: 20px 210px 20px 20px;
     height: 205px;
