--- a/templates/react/containers/login/style.css
+++ b/templates/react/containers/login/style.css
@@ -27,6 +27,6 @@
       margin-bottom: 15px;
       color: #333; }
     .join .modal-body .actions a:hover {
-      color: #faab37; }
+      color: #77b353; }
 
 /*# sourceMappingURL=style.css.map */
