--- a/templates/react/components/header/style.css
+++ b/templates/react/components/header/style.css
@@ -137,8 +137,7 @@
         background: -webkit-linear-gradient(top, #8E35EF 0, #8E35EF 100%);
         background: -o-linear-gradient(top, #8E35EF 0, #8E35EF 100%);
         background: -ms-linear-gradient(top, #8E35EF 0, #8E35EF 100%);
-        background: linear-gradient(to bottom, #8E35EF 0, #8E35EF 100%);
-        box-shadow: 3px 3.25px 7px rgba(0, 0, 0, 0.3); }
+        background: linear-gradient(to bottom, #8E35EF 0, #8E35EF 100%); }
         .header .header-nav ul li:nth-child(1) a:hover {
           border-bottom: 4px solid #650aca; }
       .header .header-nav ul li:nth-child(2) {
@@ -189,10 +188,7 @@
         background: -webkit-linear-gradient(top, #1c3648 0, #152836 100%);
         background: -o-linear-gradient(top, #1c3648 0, #152836 100%);
         background: -ms-linear-gradient(top, #1c3648 0, #152836 100%);
-        background: linear-gradient(to bottom, #1c3648 0, #152836 100%);
-        -webkit-box-shadow: 3px 3.25px 7px rgba(0, 0, 0, 0.3);
-        -moz-box-shadow: 3px 3.25px 7px rgba(0, 0, 0, 0.3);
-        box-shadow: 3px 3.25px 7px rgba(0, 0, 0, 0.3); }
+        background: linear-gradient(to bottom, #1c3648 0, #152836 100%); }
         .header .header-nav ul li:nth-child(6) a:hover {
           border-bottom: 4px solid #000; }
       .header .header-nav ul li.mobile {
