--- a/templates/react/components/priceRange/style.scss
+++ b/templates/react/components/priceRange/style.scss
@@ -1,6 +1,2 @@
-.sample{
-	background:yellow
-}
-.sample2{
-  background:red
-}
+@import "../../../../node_modules/bootstrap-slider/dist/css/bootstrap-slider.css";
+
