--- a/templates/react/components/banner/style.css
+++ b/templates/react/components/banner/style.css
@@ -6,6 +6,9 @@
 /*social*/
 .banner {
   height: 300px;
-  background-color: #e6e6e6; }
+  background-color: #e6e6e6;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
 
 /*# sourceMappingURL=style.css.map */
