--- a/templates/react/components/banner/style.scss
+++ b/templates/react/components/banner/style.scss
@@ -3,6 +3,9 @@
 .banner {
   height: 300px;
   background-color: $thumbnail-bg;
+  background-size: cover ;
+  background-position: center;
+  background-repeat: no-repeat;
   &.background {
 
   }
