--- a/templates/react/components/card/style.scss
+++ b/templates/react/components/card/style.scss
@@ -2,6 +2,7 @@
 
 .card {
   width: 100%;
+  margin-bottom: 30px;
   .card-header {
 	.product-title {
 	  margin-bottom: 2px;
@@ -11,6 +12,9 @@
 	  font-size: 18px;
 	  color: $link-grey-color;
 	  display: block;
+	  white-space: nowrap;
+	  overflow: hidden;
+	  text-overflow: ellipsis;
 	}
   }
   .card-body {
@@ -30,6 +34,9 @@
 		width: 100%;
 		height: 252px;
 		background-color: $thumbnail-bg;
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
 	  }
 	  &:hover {
 		.save-btn {
@@ -38,12 +45,23 @@
 	  }
 	}
 	.product-text {
-	  line-height: 17px;
 	  text-align: justify;
-	  font-size: 12px;
 	  margin-top: 5px;
-	  margin-bottom: 5px;
+	  margin-bottom: 25px;
 	  font-family: $helvetica-font;
+	  p {
+		display: block;
+		display: -webkit-box;
+		max-width: 400px;
+		height: 100px;
+		margin: 0 auto;
+		font-size: 12px;
+		line-height: 17px;
+		-webkit-line-clamp: 6;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	  }
 	}
   }
   .card-footer {
@@ -64,26 +82,31 @@
 	  }
 	}
 	.product-action {
-
+	  text-align: right;
+	  .checkout-btn{
+		display: block;
+		margin-top: -20px;
+		margin-bottom: 2px;
+	  }
 	}
   }
-  .share{
-	ul{
-	  margin:0px;
-	  li{
+  .share {
+	ul {
+	  margin: 0px;
+	  li {
 		display: inline-block;
 		margin-right: 5px;
-		a{
-		  font-size:22px;
+		a {
+		  font-size: 22px;
 		  line-height: 22px;
-		  &.facebook{
-			color:$facebook-color;
+		  &.facebook {
+			color: $facebook-color;
 		  }
-		  &.twitter{
-			color:$twitter-color;
+		  &.twitter {
+			color: $twitter-color;
 		  }
-		  &.pinterest{
-			color:$pinterest-color;
+		  &.pinterest {
+			color: $pinterest-color;
 		  }
 		}
 	  }
