--- a/templates/react/components/carousel/style.css
+++ b/templates/react/components/carousel/style.css
@@ -36,5 +36,8 @@
         height: 50px;
         border: 2px solid #77b353;
         margin: 1px; }
+      .carousel .carousel-indicators li img {
+        width: 100%;
+        height: 100%; }
 
 /*# sourceMappingURL=style.css.map */
